Restructure and Gulp Config

--- a/src/partials/_head.pug
+++ b/src/partials/_head.pug
@@ -5,13 +5,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<link rel="stylesheet" href="assets/css/framework/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/fonts/Gilroy/style.css">
-	<link rel="stylesheet" href="assets/fonts/LineIcons/Pro-Regular/font-css/LineIcons.css">
-	<link rel="stylesheet" href="assets/css/vlt-plugins.css">
-	<link rel="stylesheet" href="assets/css/vlt-main.css">
-	<link rel="stylesheet" href="assets/css/custom.css">
+	<link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon-16x16.png">
+	<link rel="manifest" href="../assets/site.webmanifest">
+	<link rel="stylesheet" href="../assets/css/framework/bootstrap.min.css">
+	<link rel="stylesheet" href="../assets/fonts/Gilroy/style.css">
+	<link rel="stylesheet" href="../assets/fonts/LineIcons/Pro-Regular/font-css/LineIcons.css">
+	<link rel="stylesheet" href="../assets/css/vlt-plugins.css">
+	<link rel="stylesheet" href="../assets/css/vlt-main.css">
+	<link rel="stylesheet" href="../assets/css/custom.css">
 </head>
