--- a/src/index.pug
+++ b/src/index.pug
@@ -48,6 +48,8 @@ html
 
 		.vlt-offcanvas-menu__footer
 			.vlt-offcanvas-menu__socials
+				a.vlt-social-icon.vlt-social-icon--style-1(href="https://github.com/hieronymous-bean")
+					i(.lnir-github-original)
 				a.vlt-social-icon.vlt-social-icon--style-1(href="#")
 					i(.lnir-linkedin-original)
 			.vlt-offcanvas-menu__copyright
@@ -55,7 +57,7 @@ html
 
 	.vlt-site-overlay
 	.vlt-fixed-socials
-		a.vlt-social-icon.vlt-social-icon--style-1(href="#")
+		a.vlt-social-icon.vlt-social-icon--style-1(href="https://github.com/hieronymous-bean")
 			i.lnir-github-original
 		a.vlt-social-icon.vlt-social-icon--style-1(href="#")
 			i.lnir-linkedin-original
@@ -66,18 +68,16 @@ html
 				.vlt-section__vertical-align
 					.vlt-section__content
 						.vlt-section__ken-burn-background.has-mobile-image
-							img(src="assets/img/abstract-spiral/black-11.jpg" alt="")/
-							img(src="assets/img/abstract-spiral/black-11.jpg" alt="")/
+							img(src="../assets/img/abstract-spiral/black-11.jpg" alt="")/
+							img(src="../assets/img/abstract-spiral/black-11.jpg" alt="")/
 						.container
 							.row
-								.col-lg-10
+								.col-lg-12
 									.vlt-gap-100
 									.vlt-gap-15
 									.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:.2s; animation-duration:700ms;")
-										h1.vlt-large-heading Jeffrey
-											span.has-accent-color
-											|Brown
-											span.has-accent-color 
+										h1.vlt-large-heading Jeffrey Brown
+											span.has-accent-color .
 									.vlt-gap-15
 									.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:.2s; animation-duration:700ms;")
 										p Full-stack web developer currently based in <br>
@@ -86,37 +86,58 @@ html
 				.vlt-section__vertical-align
 					.vlt-section__content
 						.vlt-section__projects-background
-							img(src="assets/img/deep-space-2.jpg" alt="" loading="lazy")/
+							img(src="../assets/img/deep-space-2.jpg" alt="" loading="lazy")
+							img(src="../assets/img/deep-space-2.jpg" alt="" loading="lazy")
+							img(src="../assets/img/deep-space-2.jpg" alt="" loading="lazy")
 						.container
 							.vlt-gap-100
 								.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:0s;animation-duration:700ms;")
-								.vlt-content-slider(data-navigation-anchor=".vlt-projects-anchor" data-effect="fade" data-gap="" data-loop="" data-speed="" data-autoplay="" data-autoplay-speed="" data-slides-centered="" data-slide-settings="{}" data-free-mode="" data-slider-offset="" data-mousewheel="")
-									.swiper-container
-										.swiper-wrapper
-											.swiper-slide
-												article.vlt-project
-													h3.vlt-project-title Celestial Bodies
-														span.has-accent-color .
-													.vlt-project-excerpt
-														p Test
-													a.vlt-btn.vlt-btn--primary.vlt-btn--md(href="#" target="_self") See More
-								.vlt-gap-100
-								.vlt-slider-controls.vlt-slider-controls--style-2.vlt-projects-anchor
-									.vlt-swiper-pagination
-									.vlt-swiper-button-prev
-										svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 45")
-											<defs />
-											<path fill="currentColor" fill-rule="evenodd" d="M1.36413 22.5795L24 43.9524l-.7271.6865L.272896 22.9223l.383716-.3623-.362754-.3367L23.0941.319721l.733.680233L1.36413 22.5795z" clip-rule="evenodd" /></svg></div>
-									<div class="vlt-swiper-button-next"><svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 45">
-											<defs />
-											<path fill-rule="evenodd" clip-rule="evenodd" d="M22.6359 22.3728L0 1.00001.727101.313477 23.7271 22.0301l-.3837.3623.3627.3367L.905866 44.6327l-.732997-.6803L22.6359 22.3728z" fill="currentColor" />
+									.vlt-content-slider(data-navigation-anchor=".vlt-projects-anchor" data-effect="fade" data-gap="" data-loop="" data-speed="" data-autoplay="" data-autoplay-speed="" data-slides-centered="" data-slide-settings="{}" data-free-mode="" data-slider-offset="" data-mousewheel="")
+										.swiper-container
+											.swiper-wrapper
+												.swiper-slide
+													article.vlt-project
+														h3.vlt-project-title Celestial Bodies
+															span.has-accent-color .
+														.vlt-project-excerpt
+															p Lightweight wrapper for interacting with NASA's API libraries at api.nasa.gov. 
+														a.vlt-btn.vlt-btn--primary.vlt-btn--md(href="https://github.com/hieronymous-bean/celestial-bodies" target="_self") Go to Project
+												.swiper-slide
+													article.vlt-project
+														h3.vlt-project-title Urchin
+															span.has-accent-color .
+														.vlt-project-excerpt
+															p HTML component and module toolkit for starting projects. 
+														a.vlt-btn.vlt-btn--primary.vlt-btn--md(href="https://github.com/hieronymous-bean/urchin" target="_self") Go to Project
+												.swiper-slide
+													article.vlt-project
+														h3.vlt-project-title Exemplar
+															span.has-accent-color .
+														.vlt-project-excerpt
+															p Lightweight application for generating XML documents from predefined schema. 
+														a.vlt-btn.vlt-btn--primary.vlt-btn--md(href="https://github.com/hieronymous-bean/exemplar" target="_self") Go to Project
+									
+									.vlt-slider-controls.vlt-slider-controls--style-2.vlt-projects-anchor
+										.vlt-swiper-pagination
+										.vlt-swiper-button-prev
+											svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 45")
+												defs
+												path(fill="currentColor" fill-rule="evenodd" d="M1.36413 22.5795L24 43.9524l-.7271.6865L.272896 22.9223l.383716-.3623-.362754-.3367L23.0941.319721l.733.680233L1.36413 22.5795z" clip-rule="evenodd")
+												
+										.vlt-swiper-button-next
+											svg(fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 45")
+												defs
+												path(fill-rule="evenodd" clip-rule="evenodd" d="M22.6359 22.3728L0 1.00001.727101.313477 23.7271 22.0301l-.3837.3623.3627.3367L.905866 44.6327l-.732997-.6803L22.6359 22.3728z" fill="currentColor")
+											
+								
 			.vlt-fullpage-slider-progress-bar
+				span
 
 	footer.vlt-footer.vlt-footer--default.vlt-footer--fixed
 		.vlt-footer-copyright
 			p © Jeffrey Allan Brown. 2020
 
-	script(src="assets/vendors/jquery-3.5.1.min.js")
-	script(src="assets/scripts/vlt-plugins.min.js")
-	script(src="assets/scripts/vlt-helpers.js")
-	script(src="assets/scripts/vlt-controllers.min.js")
+	script(src="../assets/js/jquery-3.5.1.min.js")
+	script(src="../assets/js/vlt-plugins.min.js")
+	script(src="../assets/js/vlt-helpers.js")
+	script(src="../assets/js/vlt-controllers.min.js")
