--- a/src/index.pug
+++ b/src/index.pug
@@ -9,7 +9,7 @@ html
 			.vlt-navbar-background
 			.vlt-navbar-inner
 				.vlt-navbar-inner--left
-					a.vlt-navbar-logo(href="#")
+					a.vlt-navbar-logo(href="")
 						img(src="assets/img/logo-white.png" alt="jeffreyallanbrown")
 				.vlt-navbar-inner--center
 					.container
@@ -22,7 +22,7 @@ html
 				.vlt-navbar-inner--right
 					.d-flex.align-items-center
 						.vlt-navbar-contacts
-							a(href="#") jeffrey@jeffreyallanbrown.com
+							a(href="mailto:jeffrey@jeffreyallanbrown.com") jeffrey@jeffreyallanbrown.com
 						a.vlt-menu-burger.js-offcanvas-menu-open(href="#")
 							svg(xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="square" stroke-linejoin="round")
 								line(x1="3" y1="12" x2="21" y2="12")/
@@ -31,10 +31,6 @@ html
 
 	.vlt-offcanvas-menu
 		.vlt-offcanvas-menu__header
-			.vlt-language-switcher
-				a.is-active(href="#") Option 1
-				a(href="#") Option 2
-				a(href="#") Option 3
 			a.vlt-menu-burger.vlt-menu-burger--opened.js-offcanvas-menu-close(href="#")
 				svg(xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="square" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24")
 					defs/
@@ -50,7 +46,7 @@ html
 			.vlt-offcanvas-menu__socials
 				a.vlt-social-icon.vlt-social-icon--style-1(href="https://github.com/hieronymous-bean")
 					i(.lnir-github-original)
-				a.vlt-social-icon.vlt-social-icon--style-1(href="#")
+				a.vlt-social-icon.vlt-social-icon--style-1(href="https://www.linkedin.com/in/jeffreyallanbrown/")
 					i(.lnir-linkedin-original)
 			.vlt-offcanvas-menu__copyright
 				p © 2020 Copyright. Jeffrey Allan Brown.<br>All rights reserved.
@@ -59,7 +55,7 @@ html
 	.vlt-fixed-socials
 		a.vlt-social-icon.vlt-social-icon--style-1(href="https://github.com/hieronymous-bean")
 			i.lnir-github-original
-		a.vlt-social-icon.vlt-social-icon--style-1(href="#")
+		a.vlt-social-icon.vlt-social-icon--style-1(href="https://www.linkedin.com/in/jeffreyallanbrown/")
 			i.lnir-linkedin-original
 
 	main.vlt-main
