Add spacing above project button

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,7 +10,7 @@ html
 			.vlt-navbar-inner
 				.vlt-navbar-inner--left
 					a.vlt-navbar-logo(href="")
-						img(src="assets/img/logo-white.png" alt="jeffreyallanbrown")
+						img(src="../assets/img/logo-white.png" alt="jeffreyallanbrown")
 				.vlt-navbar-inner--center
 					.container
 						.vlt-default-menu__navigation
@@ -112,7 +112,7 @@ html
 														.vlt-project-excerpt
 															p Lightweight application for generating XML documents from predefined schema. 
 														a.vlt-btn.vlt-btn--primary.vlt-btn--md(href="https://github.com/hieronymous-bean/exemplar" target="_self") Go to Project
-									
+									.vlt-gap-150
 									.vlt-slider-controls.vlt-slider-controls--style-2.vlt-projects-anchor
 										.vlt-swiper-pagination
 										.vlt-swiper-button-prev
