--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html class="no-js vlt-is--homepage vlt-is--footer-fixed" lang="en">
 <head>
   <meta charset="utf-8">
@@ -7,12 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="icon" type="image/svg" href="assets/img/root/favicon.svg">
-  <link rel="stylesheet" href="assets/css/framework/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/fonts/Gilroy/style.css">
-  <link rel="stylesheet" href="assets/fonts/LineIcons/Pro-Regular/font-css/LineIcons.css">
-  <link rel="stylesheet" href="assets/css/vlt-plugins.min.css">
-  <link rel="stylesheet" href="assets/css/vlt-main.min.css">
-  <link rel="stylesheet" href="assets/css/custom.css">
+  <link rel="stylesheet" href="../assets/css/framework/bootstrap.min.css">
+  <link rel="stylesheet" href="../assets/fonts/Gilroy/style.css">
+  <link rel="stylesheet" href="../assets/fonts/LineIcons/Pro-Regular/font-css/LineIcons.css">
+  <link rel="stylesheet" href="../assets/css/vlt-plugins.min.css">
+  <link rel="stylesheet" href="../assets/css/vlt-main.min.css">
+  <link rel="stylesheet" href="../assets/css/custom.css">
 </head>
 <body class=" animsition">
   <header class="vlt-header vlt-header--default">
@@ -142,7 +142,7 @@
                 </div>
               </div>
             </div>
-            -->
+           
           
             <div class="vlt-section pp-scrollable" data-anchor="About">
               <div class="vlt-section__vertical-align">
@@ -204,49 +204,48 @@
                 </div>
               </div>
             </div>
-            <!--Projects-->
-            <!--Section-->
-            <div class="vlt-section pp-scrollable" data-anchor="Projects">
+
+           <div class="vlt-section pp-scrollable" data-anchor="Projects">
               <div class="vlt-section__vertical-align">
                 <div class="vlt-section__content">
-                  <!--Projects-->
+ 
                   <div class="vlt-section__projects-background"><img class="is-active" src="assets/img/project-01.jpg" alt="" loading="lazy"><img src="assets/img/project-02.jpg" alt="" loading="lazy"><img src="assets/img/project-03.jpg" alt="" loading="lazy"></div>
                   <div class="container">
                     <div class="vlt-gap-100"></div>
-                    <!--Animated Block-->
+                 
                     <div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:0s; animation-duration:700ms;">
-                      <!--Content slider-->
+                   
                       <div class="vlt-content-slider " data-navigation-anchor=".vlt-projects-anchor" data-effect="fade" data-gap="" data-loop="" data-speed="" data-autoplay="" data-autoplay-speed="" data-slides-centered="" data-slide-settings="{}" data-free-mode="" data-slider-offset="" data-mousewheel="">
                         <div class="swiper-container">
                           <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                              <!--Product-->
+                         
                               <article class="vlt-project">
                                 <h3 class="vlt-project-title">Watch<span class="has-accent-color">.</span></h3>
                                 <div class="vlt-project-excerpt">
                                   <p>Bring saw gathering kind evening them air him void morning dominion spirit multiply seas shall day were likeness. Upon tree a gathering.</p>
                                 </div>
-                                <!--Button--><a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See Project</a>
+                                <a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See Project</a>
                               </article>
                             </div>
                             <div class="swiper-slide">
-                              <!--Product-->
+    
                               <article class="vlt-project">
                                 <h3 class="vlt-project-title">The Bottle<span class="has-accent-color">.</span></h3>
                                 <div class="vlt-project-excerpt">
                                   <p>Working with client and community, we deliver masterplans that create vibrant new places and spaces, attract people, and encourage investment through.</p>
                                 </div>
-                                <!--Button--><a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See Project</a>
+                                <a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See Project</a>
                               </article>
                             </div>
                             <div class="swiper-slide">
-                              <!--Product-->
+                           
                               <article class="vlt-project">
                                 <h3 class="vlt-project-title">Aesop<span class="has-accent-color">.</span></h3>
                                 <div class="vlt-project-excerpt">
                                   <p>Third dry hath saying our over fruit Place creeping creepeth let Good. Created also darkness which open appear cattle Second shall brought wherein given. Moveth.</p>
                                 </div>
-                                <!--Button--><a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See Project</a>
+                              <a class="vlt-btn vlt-btn--primary vlt-btn--md" href="single-product.html" target="_self">See Project</a>
                               </article>
                             </div>
                           </div>
@@ -269,6 +268,8 @@
                   </div>
                 </div>
                 <!--Education-->
+
+
                 <!--Section-->
                 <div class="vlt-section pp-scrollable" data-anchor="Education">
                   <div class="vlt-section__vertical-align">
@@ -432,127 +433,7 @@
                         </div>
                       </div>
                     </div>
-                    <!--Testimonials-->
-                    <!--Section-->
-                    <div class="vlt-section pp-scrollable" data-anchor="Testimonials">
-                      <div class="vlt-section__vertical-align">
-                        <div class="vlt-section__content">
-                          <!--Ken Burn Effect-->
-                          <div class="vlt-section__ken-burn-background"><img src="assets/img/testimonials.jpg" alt=""></div>
-                          <div class="container">
-                            <div class="row align-items-end">
-                              <div class="col-xl-6">
-                                <!--Animated Block-->
-                                <div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:0s; animation-duration:700ms;">
-                                  <div class="has-accent-color"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 75 75" style="height: 75px;">
-                                    <defs />
-                                    <path fill="currentColor" d="M25 0C16.9271 0 10.7422 2.14844 6.44531 6.44531 2.14844 10.7422 0 16.9271 0 25v50h31.25V25H12.5c0-4.4271.9766-7.6172 2.9297-9.5703C17.3828 13.4766 20.5729 12.5 25 12.5V0zm43.75 0c-8.0729 0-14.2578 2.14844-18.5547 6.44531C45.8984 10.7422 43.75 16.9271 43.75 25v50H75V25H56.25c0-4.4271.9766-7.6172 2.9297-9.5703C61.1328 13.4766 64.3229 12.5 68.75 12.5V0z" /></svg>
-                                    <div class="vlt-gap-215 vlt-gap-100--lg"></div>
-                                    <h3>Creative & dedicated is things that gilber studio brings for your business.</h3>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="col-xl-4 col-md-6 offset-xl-2">
-                                <div class="vlt-gap-70--lg"></div>
-                                <!--Animated Block-->
-                                <div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:.1s; animation-duration:700ms;">
-                                  <!--Content slider-->
-                                  <div class="vlt-content-slider " data-navigation-anchor=".vlt-testimonials-anchor" data-effect="" data-gap="" data-loop="" data-speed="" data-autoplay="" data-autoplay-speed="" data-slides-centered="" data-slide-settings="{}" data-free-mode="" data-slider-offset="" data-mousewheel="">
-                                    <div class="swiper-container">
-                                      <div class="swiper-wrapper">
-                                        <div class="swiper-slide">
-                                          <!--Testimonial-->
-                                          <div class="vlt-testimonial">
-                                            <div class="vlt-testimonial__text">
-                                              <p>&quot;Said heaven dry made Them gathering the very second morning us be divide isn't. Saw Seasons winged replenish grass from set can't for he which. You third god unto let.&quot;
-                                              </p>
-                                            </div>
-                                            <div class="vlt-testimonial__meta">
-                                              <h5 class="vlt-testimonial__name">Dwight Schrute
-                                              </h5>
-                                              <div class="vlt-testimonial__function">The Office
-                                              </div>
-                                            </div>
-                                          </div>
-                                        </div>
-                                        <div class="swiper-slide">
-                                          <!--Testimonial-->
-                                          <div class="vlt-testimonial">
-                                            <div class="vlt-testimonial__text">
-                                              <p>&quot;Said heaven dry made Them gathering the very second morning us be divide isn't. Saw Seasons winged replenish grass from set can't for he which. You third god unto let.&quot;
-                                              </p>
-                                            </div>
-                                            <div class="vlt-testimonial__meta">
-                                              <h5 class="vlt-testimonial__name">Paul &amp; Amanda
-                                              </h5>
-                                              <div class="vlt-testimonial__function">Envato Studio
-                                              </div>
-                                            </div>
-                                          </div>
-                                        </div>
-                                        <div class="swiper-slide">
-                                          <!--Testimonial-->
-                                          <div class="vlt-testimonial">
-                                            <div class="vlt-testimonial__text">
-                                              <p>&quot;Said heaven dry made Them gathering the very second morning us be divide isn't. Saw Seasons winged replenish grass from set can't for he which. You third god unto let.&quot;
-                                              </p>
-                                            </div>
-                                            <div class="vlt-testimonial__meta">
-                                              <h5 class="vlt-testimonial__name">Ramsay Bolton
-                                              </h5>
-                                              <div class="vlt-testimonial__function">Apple Inc
-                                              </div>
-                                            </div>
-                                          </div>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </div>
-                                  <div class="vlt-gap-75"></div>
-                                  <!--Slider controls-->
-                                  <div class="vlt-slider-controls vlt-slider-controls--style-1 vlt-testimonials-anchor">
-                                    <div class="vlt-swiper-button-prev"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 45">
-                                      <defs />
-                                      <path fill="currentColor" fill-rule="evenodd" d="M1.36413 22.5795L24 43.9524l-.7271.6865L.272896 22.9223l.383716-.3623-.362754-.3367L23.0941.319721l.733.680233L1.36413 22.5795z" clip-rule="evenodd" /></svg></div>
-                                      <div class="vlt-swiper-button-next"><svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 45">
-                                        <defs />
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M22.6359 22.3728L0 1.00001.727101.313477 23.7271 22.0301l-.3837.3623.3627.3367L.905866 44.6327l-.732997-.6803L22.6359 22.3728z" fill="currentColor" /></svg></div>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <!--Partners-->
-                        <!--Section-->
-                        <div class="vlt-section pp-scrollable" data-anchor="Partners">
-                          <div class="vlt-section__vertical-align">
-                            <div class="vlt-section__content">
-                              <div class="container">
-                                <!--Animated Block-->
-                                <div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:0s; animation-duration:700ms;">
-                                  <h3>Partners</h3>
-                                </div>
-                                <div class="vlt-gap-100"></div>
-                                <!--Animated Block-->
-                                <div class="vlt-animated-block" data-animation-name="fadeInUpSm" style="animation-delay:.1s; animation-duration:700ms;">
-                                  <ul class="vlt-partners">
-                                    <li><img src="assets/img/root/logo-01.png" alt="" loading="lazy"></li>
-                                    <li><img src="assets/img/root/logo-02.png" alt="" loading="lazy"></li>
-                                    <li><img src="assets/img/root/logo-03.png" alt="" loading="lazy"></li>
-                                    <li><img src="assets/img/root/logo-04.png" alt="" loading="lazy"></li>
-                                    <li><img src="assets/img/root/logo-05.png" alt="" loading="lazy"></li>
-                                    <li><img src="assets/img/root/logo-06.png" alt="" loading="lazy"></li>
-                                    <li><img src="assets/img/root/logo-07.png" alt="" loading="lazy"></li>
-                                    <li><img src="assets/img/root/logo-08.png" alt="" loading="lazy"></li>
-                                  </ul>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
+                    
                         <!--Blog-->
                         <!--Section-->
                         <div class="vlt-section pp-scrollable" data-anchor="Blog">
@@ -702,10 +583,10 @@
                                   <div class="vlt-language-switcher"><a class="is-active" href="#">Eng</a><a href="#">Fra</a><a href="#">Ger</a></div>
                                 </footer>
                                 <!--Libs-->
-                                <script src="assets/vendors/jquery-3.5.1.min.js"></script>
-                                <script src="assets/scripts/vlt-plugins.min.js"></script>
-                                <script src="assets/scripts/vlt-helpers.js"></script>
-                                <script src="assets/scripts/vlt-controllers.min.js"></script>
+                                <script src="../assets/vendors/jquery-3.5.1.min.js"></script>
+                                <script src="../assets/scripts/vlt-plugins.min.js"></script>
+                                <script src="../assets/scripts/vlt-helpers.js"></script>
+                                <script src="../assets/scripts/vlt-controllers.min.js"></script>
                               </body>
 
                               </html>
