--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -7,7 +7,10 @@ head
 	meta(name="description" content="Jeffrey Allan Brown | Full-Stack Web Developer")
 	meta(http-equiv="X-UA-Compatible" content="IE=edge")
 	meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1")
-	link(rel="icon" type="image/svg" href="assets/img/root/favicon.svg")
+	link(rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png")
+	link(rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png")
+	link(rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png")
+	link(rel="manifest" href="assets/img/site.webmanifest")
 	link(rel="stylesheet" href="assets/css/bootstrap.min.css")
 	link(rel="stylesheet" href="assets/fonts/Gilroy/style.css")
 	link(rel="stylesheet" href="assets/fonts/LineIcons/Pro-Regular/font-css/LineIcons.css")
@@ -22,17 +25,26 @@ body.animsition
 			.vlt-navbar-inner
 				.vlt-navbar-inner--left
 					a.vlt-navbar-logo(href="index.html")
-						img(src="assets/img/root/logo.svg" alt="Jeffrey Allan Brown")
+						img(src="assets/img/logo.png" alt="Jeffrey Allan Brown")
 				.vlt-navbar-inner--center
 					.container
-						nav.clt-default-menu__navigation
+						nav.vlt-default-menu__navigation
 							ul.sf-menu
 								li(data-menuanchor="Home")
 									a(href="#Home") Home
-				.vlt-navbar-inner-right
+								li(data-menuanchor="Projects")
+									a(href="#Projects") Projects
+								li(data-menuanchor="Experience")
+									a(href="#Resume") Resume
+								li(data-menuanchor="Writing")
+									a(href="#Writing") Writing
+								li(data-menuanchor="Contact")
+									a(href="#Contact") Contact
+
+				.vlt-navbar-inner--right
 					.d-flex.align-items-center
 						.vlt-navbar-contacts
-							a(href="tel:+72126742510") 123
+							a(href="tel:4406507114") 440-650-7114
 						a.vlt-menu-burger.js-offcanvas-menu-open(href="#")
 							svg(xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="square" stroke-linejoin="round")
 								line(x1="3" y1="12" x2="21" y2="12")
@@ -40,9 +52,6 @@ body.animsition
 								line(x1="3" y1="18" x2="21" y2="18")
 	.vlt-offcanvas-menu
 		.vlt-offcanvas-menu__header
-			.vlt-language-switcher
-				a.is-active(href="#")
-					| EN
 			a.vlt-menu-burger.vlt-menu-burger--opened.js-offcanvas-menu-close(href="#")
 				svg(xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="square" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24")
 					defs
@@ -50,25 +59,29 @@ body.animsition
 		nav.vlt-offcanvas-menu__navigation
 			ul.sf-menu
 				li(data-menuanchor="Home")
-					a(href="#Home")
-			.vlt-offcanvas-menu__footer
-				.vlt-offcanvas-menu__socials
-					a.vlt-social-icon.vlt-social-icon--style-1(href="#")
-						i.lnir-facebook-filled
-					a.vlt-social-icon.vlt-social-icon--style-1(href="#")
-						i.lnir-twitter-original
-					a.vlt-social-icon.vlt-social-icon--style-1(href="#")
-						i.lnir-instagram
+					a(href="#Home") Home
+				li(data-menuanchor="Projects")
+					a(href="#Projects") Projects
+				li(data-menuanchor="Experience")
+					a(href="#Resume") Resume
+				li(data-menuanchor="Writing")
+					a(href="#Writing") Writing
+				li(data-menuanchor="Contact")
+					a(href="#Contact") Contact
+		.vlt-offcanvas-menu__footer
+			.vlt-offcanvas-menu__socials
+				a.vlt-social-icon.vlt-social-icon--style-1(href="https://github.com/hieronymous-bean")
+					i.lnir-github-original
+				a.vlt-social-icon.vlt-social-icon--style-1(href="https://twitter.com/hieronymousbean")
+					i.lnir-twitter-original
 			.vlt-offcanvas-menu__copyright
-				p © 2020 Copyright.<br>All rights reserved.
+				p © 2021 Copyright.<br>All rights reserved.
 	.vlt-site-overlay
 	.vlt-fixed-socials
-		a.vlt-social-icon.vlt-social-icon--style-1(href="#")
-			i.lnir-facebook-filled
-		a.vlt-social-icon.vlt-social-icon--style-1(href="#")
+		a.vlt-social-icon.vlt-social-icon--style-1(href="https://github.com/hieronymous-bean")
+			i.lnir-github-original
+		a.vlt-social-icon.vlt-social-icon--style-1(href="https://twitter.com/hieronymousbean")
 			i.lnir-twitter-original
-		a.vlt-social-icon.vlt-social-icon--style-1(href="#")
-			i.lnir-instagram
 	main.vlt-main
 		.vlt-fullpage-slider(data-loop-top="" data-loop-bottom="" data-speed="450")
 			.vlt-section.pp-scrollable(data-anchor="Home")
@@ -82,11 +95,6 @@ body.animsition
 								.col-lg-5
 									.vlt-gap-160
 									.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:0s; animation-duration:700ms;")
-										.vlt-video-button
-											a(href="https://vimeo.com/367945766" data-fancybox data-small-btn="true" rel="nofollow")
-												svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 27")
-													defs()
-													path(fill="currentColor" d="M23.7471 13.2802L.876191 26.4847.876192.0757026 23.7471 13.2802z")
 									.vlt-gap-100
 									.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:.1s; animation-duration:700ms;")
 										span.vlt-display-1.has-white-color
@@ -97,13 +105,159 @@ body.animsition
 											span.has-accent-color .
 									.vlt-gap-15
 									.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:.3s; animation-duration:700ms;")
-										p Working with client and community, we deliver masterplans that create vibrant new places and spaces, attract people, and encourage.
+										p 
+			.vlt-section.pp-scrollable(data-anchor="Projects")
+				.vlt-section__vertical-align
+					.vlt-section__content
+						.vlt-section__projects-background
+							img.is-active(src="assets/img/project-01.jpg" alt="" loading="lazy")
+							img(src="assets/img/project-02.jpg" alt="" loading="lazy")
+							img(src="assets/img/project-03.jpg" alt="" loading="lazy")
+						.container
+							.vlt-gap-100
+							.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:0s; animation-duration:700ms;")
+								.vlt-content-slider(data-navigation-anchor=".vlt-projects-anchor" data-effect="fade" data-gap="" data-loop="" data-speed="" data-autoplay="" data-autoplay-speed="" data-slides-centered="" data-slide-settings="{}" data-free-mode="" data-slider-offset="" data-mousewheel="")
+									.swiper-container
+										.swiper-wrapper
+											.swiper-slide
+												article.vlt-project
+													h3.vlt-project-title Borges
+														span.has-accent-color .
+													.vlt-project-excerpt
+														p Bring saw gathering kind evening them air him void morning dominion spirit multiply seas shall day were likeness. Upon tree a gathering. 
+													a.vlt-btn.vlt-btn--primary.vlt-btn--md(href="#" target="_self") See Project
+											.swiper-slide
+												article.vlt-project
+													h3.vlt-project-title Doughnet
+														span.has-accent-color .
+													.vlt-project-excerpt
+														p Bring saw gathering kind evening them air him void morning dominion spirit multiply seas shall day were likeness. Upon tree a gathering. 
+													a.vlt-btn.vlt-btn--primary.vlt-btn--md(href="#" target="_self") See Project
+											.swiper-slide
+												article.vlt-project
+													h3.vlt-project-title Labstacker
+														span.has-accent-color .
+													.vlt-project-excerpt
+														p Bring saw gathering kind evening them air him void morning dominion spirit multiply seas shall day were likeness. Upon tree a gathering. 
+													a.vlt-btn.vlt-btn--primary.vlt-btn--md(href="#" target="_self") See Project
+							.vlt-gap-150
+							.vlt-slider-controls.vlt-slider-controls--style-2.vlt-projects-anchor
+								.vlt-swiper-pagination
+								.vlt-swiper-button-prev
+									svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 45")
+										<defs>
+											path(fill="currentColor" fill-rule="evenodd" d="M1.36413 22.5795L24 43.9524l-.7271.6865L.272896 22.9223l.383716-.3623-.362754-.3367L23.0941.319721l.733.680233L1.36413 22.5795z" clip-rule="evenodd")
+								.vlt-swiper-button-next
+									svg(fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 45")
+										<defs>
+											path(fill-rule="evenodd" clip-rule="evenodd" d="M22.6359 22.3728L0 1.00001.727101.313477 23.7271 22.0301l-.3837.3623.3627.3367L.905866 44.6327l-.732997-.6803L22.6359 22.3728z" fill="currentColor")
+			.vlt-section.pp-scrollable(data-anchor="Resume")
+				.vlt-section__vertical-align
+					.vlt-section__content
+						.container
+							.vlt-gap-70
+							.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:0s; animation-duration:700ms;")
+								.d-block.d-md-flex.align-items-center.justify-content-between
+									h3 Resume
+									.vlt-gap-30--sm
+									a.vlt-btn.vlt-btn--primary.vlt-btn--md(href="#" target="_self") Download CV
+							.vlt-gap-50
+							.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:.1s; animation-duration:700ms;")
+								.vlt-content-slider(data-navigation-anchor=".vlt-education-anchor" data-effect="" data-gap="120" data-loop="" data-speed="" data-autoplay="" data-autoplay-speed="" data-slides-centered="" data-slide-settings="{}" data-free-mode="" data-slider-offset="" data-mousewheel="")
+									.swiper-container
+										.swiper-wrapper
+											.swiper-slide
+												.vlt-timeline-item
+													.row
+														.col-xl-4
+															img(src="assets/img/root/behance.png" alt="Behance" loading="lazy")
+														.col-xl-4
+															span.vlt-timeline-item__date 2020-2020
+															h5.vlt-timeline-item__title Behance
+														.col-xl-4
+															p.vlt-timeline-item__text Which firmament dominion first rule and tree. The seas he i were cattle Under living. It may beast every forth place.
+								.vlt-gap-75
+								.vlt-slider-controls.vlt-slider-controls--style-2.vlt-education-anchor
+									.vlt-swiper-pagination
+									.vlt-swiper-button-prev
+										svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 45")
+											defs
+												path(fill="currentColor" fill-rule="evenodd" d="M1.36413 22.5795L24 43.9524l-.7271.6865L.272896 22.9223l.383716-.3623-.362754-.3367L23.0941.319721l.733.680233L1.36413 22.5795z" clip-rule="evenodd")
+									.vlt-swiper-button-next
+										svg(fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 45")
+											defs
+												path(fill-rule="evenodd" clip-rule="evenodd" d="M22.6359 22.3728L0 1.00001.727101.313477 23.7271 22.0301l-.3837.3623.3627.3367L.905866 44.6327l-.732997-.6803L22.6359 22.3728z" fill="currentColor")
+
+
+			.vlt-section.pp-scrollable(data-anchor="Writing")
+				.vlt-section__vertical-align
+					.vlt-section__content
+						.container
+							.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:0s; animation-duration:700ms;")
+								h3 Writing
+							.vlt-gap-100
+							.row
+								.col-xl-4
+									.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:.1s; animation-duration:700ms;")
+										article.vlt-post.vlt-post--masonry
+											.vlt-post-border
+												span.top
+												span.right
+												span.bottom
+												span.left
+											.vlt-post-media
+												img(src="assets/img/blog-01.jpg" alt="" loading="lazy")
+											.vlt-post-content
+												header.vlt-post-header
+													span.vlt-post-date Date
+													h3.vlt-post-title
+														a(href="#") Title
+												.vlt-post-excerpt
+													p Excerpt
+												footer.vlt-post-footer
+													a.vlt-read-more-link(href="#") Read More
+														svg(fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 8")
+															<defs>
+																path(d="M15.3536 4.35355c.1952-.19526.1952-.51184 0-.7071L12.1716.464466c-.1953-.195262-.5119-.195262-.7071 0-.1953.195262-.1953.511845 0 .707104L14.2929 4l-2.8284 2.82843c-.1953.19526-.1953.51184 0 .7071.1952.19527.5118.19527.7071 0l3.182-3.18198zM0 4.5h15v-1H0v1z" fill="currentColor")
+			.vlt-section.pp-scrollable(data-anchor="Contact")
+				.vlt-section__vertical-align
+					.vlt-section__content
+						.vlt-section__ken-burn-background
+							img(src="assets/img/contact.jpg" alt="")
+						.container
+							.row
+								.col-xl-4
+									.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:0s; animation-duration:700ms;")
+										h3 Contact
+										.vlt-gap-30
+										p Text
+										.vlt-gap-40
+										address 123 Street
+										p
+											a.tel(href="tel:440-650-7114") 440-650-7114
+										p
+											a.email(href="#") jeffrey@jeffreyallanbrown.com
+								.col-xl-6.offset-xl-2
+									.vlt-gap-70--lg
+									.vlt-animated-block(data-animation-name="fadeInUpSm" style="animation-delay:.1s; animation-duration:700ms;")
+										h4 Text Here
+											span.has-accent-color 
+											| Here
+									.vlt-gap-20
+									form.vlt-contact-form(novalidate="novalidate")
+										.vlt-form-group
+											input(type="text" id="name" name="name" required="required" placeholder="Your Name")
+										.vlt-form-group
+											input(type="email" id="email" name="email" required="required" placeholder="Your Email")
+										.vlt-form-group
+											textarea(name="message" id="message" rows="3" placeholder="Message")
+										.message.success Your message is successfully sent...
+										.message.danger Sorry something went wrong!
+										button.lt-btn.vlt-btn--primary.vlt-btn--md Button
+			.vlt-fullpage-slider-progress-bar
 	footer.vlt-footer.vlt-footer--default.vlt-footer--fixed
 		.vlt-footer-copyright
-			p © Jeffrey Allan Brown. 2021
-		.vlt-language-switcher
-			a.is-active(href="#")
-				| EN
+			p © 2021 Copyright Jeffrey Allan Brown. All rights reserved.
 
 	script(src="assets/vendors/jquery-3.5.1.min.js")
 	script(src="assets/scripts/vlt-plugins.min.js")
